# Investingnew

./: .env.local  .replit  ADMIN_ACCESS.md  COMPLETE_PROJECT_SETUP.md  DEMO_CREDENTIALS.md  README.md  SETUP_COMPLETE.md  app.py  index.html  live-activity-feed-v0.tsx  main.py  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  replit.md  start.sh  v0-export.tsx
.next/: app-build-manifest.json  trace
.next/cache/: config.json
.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
app/: globals.css  layout.tsx  page.tsx
app/admin/: layout.tsx
app/all-transactions/: loading.tsx  page.tsx
app/all-users/: loading.tsx  page.tsx
app/dashboard/: page.tsx
app/login/: page.tsx
app/register/: page.tsx
components/: admin-access-button.tsx  education-center.tsx  faq.tsx  features.tsx  footer.tsx  header.tsx  hero-section.tsx  investment-plans.tsx  live-activity-feed.tsx  mobile-app.tsx  new-users-showcase.tsx  news-section.tsx  profit-calculator.tsx  settings-provider.tsx  statistics.tsx  testimonials.tsx  theme-provider.tsx  trust-indicators.tsx  user-activity-rows.tsx
components/admin/: advanced-filters.tsx  header.tsx  sidebar.tsx  (+2 more)
export/: complete_database_export.sql
hooks/: use-voice-notifications.ts
lib/: auth.ts  database.ts  voice-service.ts
scripts/: create-complete-auth-database.sql  create-complete-database-structure.sql  create-hero-settings-table.sql  create-test-user.sql  fix-auth-database.sql  fix-database-structure.sql  fix-missing-tables.sql
styles/: globals.css
templates/: index.html
(+337 files in other folders)
